--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -345,7 +345,7 @@ sp_inside_angle_empty           = ignore   # ignore/add/remove/force
 sp_angle_colon                  = remove   # ignore/add/remove/force
 
 # Add or remove space after '>'.
-sp_after_angle                  = add      # ignore/add/remove/force
+sp_after_angle                  = remove      # ignore/add/remove/force
 
 # Add or remove space between '>' and '(' as found in 'new List<byte>(foo);'.
 sp_angle_paren                  = remove   # ignore/add/remove/force
@@ -2256,10 +2256,10 @@ nl_before_return                = false    # true/false
 nl_after_return                 = false    # true/false
 
 # Whether to put a blank line before a member '.' or '->' operators.
-nl_before_member                = ignore   # ignore/add/remove/force
+nl_before_member                = remove   # ignore/add/remove/force
 
 # (Java) Whether to put a blank line after a member '.' or '->' operators.
-nl_after_member                 = ignore   # ignore/add/remove/force
+nl_after_member                 = remove   # ignore/add/remove/force
 
 # Whether to double-space commented-entries in 'struct'/'union'/'enum'.
 nl_ds_struct_enum_cmt           = false    # true/false
