--- a/uncrustify.cfg
+++ b/uncrustify.cfg
@@ -76,7 +76,7 @@ utf8_force                      = false    # true/false
 
 # Add or remove space around non-assignment symbolic operators ('+', '/', '%',
 # '<<', and so forth).
-sp_arith                        = add      # ignore/add/remove/force
+sp_arith                        = remove      # ignore/add/remove/force
 
 # Add or remove space around arithmetic operators '+' and '-'.
 #
@@ -84,7 +84,7 @@ sp_arith                        = add      # ignore/add/remove/force
 sp_arith_additive               = add      # ignore/add/remove/force
 
 # Add or remove space around assignment operator '=', '+=', etc.
-sp_assign                       = add      # ignore/add/remove/force
+sp_assign                       = remove      # ignore/add/remove/force
 
 # Add or remove space around '=' in C++11 lambda capture specifications.
 #
@@ -121,17 +121,17 @@ sp_cpp_lambda_fparen            = ignore   # ignore/add/remove/force
 # Add or remove space around assignment operator '=' in a prototype.
 #
 # If set to ignore, use sp_assign.
-sp_assign_default               = ignore   # ignore/add/remove/force
+sp_assign_default               = remove   # ignore/add/remove/force
 
 # Add or remove space before assignment operator '=', '+=', etc.
 #
 # Overrides sp_assign.
-sp_before_assign                = ignore   # ignore/add/remove/force
+sp_before_assign                = add   # ignore/add/remove/force
 
 # Add or remove space after assignment operator '=', '+=', etc.
 #
 # Overrides sp_assign.
-sp_after_assign                 = ignore   # ignore/add/remove/force
+sp_after_assign                 = add   # ignore/add/remove/force
 
 # Add or remove space in 'enum {'.
 #
@@ -142,20 +142,20 @@ sp_enum_brace                   = add      # ignore/add/remove/force
 sp_enum_paren                   = ignore   # ignore/add/remove/force
 
 # Add or remove space around assignment '=' in enum.
-sp_enum_assign                  = ignore   # ignore/add/remove/force
+sp_enum_assign                  = remove   # ignore/add/remove/force
 
 # Add or remove space before assignment '=' in enum.
 #
 # Overrides sp_enum_assign.
-sp_enum_before_assign           = ignore   # ignore/add/remove/force
+sp_enum_before_assign           = remove   # ignore/add/remove/force
 
 # Add or remove space after assignment '=' in enum.
 #
 # Overrides sp_enum_assign.
-sp_enum_after_assign            = ignore   # ignore/add/remove/force
+sp_enum_after_assign            = remove   # ignore/add/remove/force
 
 # Add or remove space around assignment ':' in enum.
-sp_enum_colon                   = ignore   # ignore/add/remove/force
+sp_enum_colon                   = remove   # ignore/add/remove/force
 
 # Add or remove space around preprocessor '##' concatenation operator.
 #
@@ -517,7 +517,7 @@ sp_between_mdatype_commas       = ignore   # ignore/add/remove/force
 sp_paren_comma                  = force    # ignore/add/remove/force
 
 # Add or remove space between a type and ':'.
-sp_type_colon                   = ignore   # ignore/add/remove/force
+sp_type_colon                   = remove   # ignore/add/remove/force
 
 # Add or remove space after the variadic '...' when preceded by a
 # non-punctuator.
@@ -548,20 +548,20 @@ sp_paren_qualifier              = ignore   # ignore/add/remove/force
 sp_paren_noexcept               = ignore   # ignore/add/remove/force
 
 # Add or remove space after class ':'.
-sp_after_class_colon            = ignore   # ignore/add/remove/force
+sp_after_class_colon            = remove   # ignore/add/remove/force
 
 # Add or remove space before class ':'.
-sp_before_class_colon           = ignore   # ignore/add/remove/force
+sp_before_class_colon           = remove   # ignore/add/remove/force
 
 # Add or remove space after class constructor ':'.
 #
 # Default: add
-sp_after_constr_colon           = ignore   # ignore/add/remove/force
+sp_after_constr_colon           = remove   # ignore/add/remove/force
 
 # Add or remove space before class constructor ':'.
 #
 # Default: add
-sp_before_constr_colon          = ignore   # ignore/add/remove/force
+sp_before_constr_colon          = remove   # ignore/add/remove/force
 
 # Add or remove space before case ':'.
 #
@@ -858,7 +858,7 @@ sp_before_dc                    = ignore   # ignore/add/remove/force
 sp_after_dc                     = ignore   # ignore/add/remove/force
 
 # (D) Add or remove around the D named array initializer ':' operator.
-sp_d_array_colon                = ignore   # ignore/add/remove/force
+sp_d_array_colon                = remove   # ignore/add/remove/force
 
 # Add or remove space after the '!' (not) unary operator.
 #
@@ -977,7 +977,7 @@ sp_after_oc_property            = ignore   # ignore/add/remove/force
 sp_after_oc_synchronized        = ignore   # ignore/add/remove/force
 
 # Add or remove space around the ':' in 'b ? t : f'.
-sp_cond_colon                   = add      # ignore/add/remove/force
+sp_cond_colon                   = remove      # ignore/add/remove/force
 
 # Add or remove space before the ':' in 'b ? t : f'.
 #
@@ -1006,7 +1006,7 @@ sp_cond_question_after          = add      # ignore/add/remove/force
 # and ':'.
 #
 # Overrides all other sp_cond_* options.
-sp_cond_ternary_short           = ignore   # ignore/add/remove/force
+sp_cond_ternary_short           = remove   # ignore/add/remove/force
 
 # Fix the spacing between 'case' and the label. Only 'ignore' and 'force' make
 # sense here.
@@ -1017,11 +1017,11 @@ sp_range                        = ignore   # ignore/add/remove/force
 
 # Add or remove space after ':' in a Java/C++11 range-based 'for',
 # as in 'for (Type var : <here> expr)'.
-sp_after_for_colon              = ignore   # ignore/add/remove/force
+sp_after_for_colon              = add   # ignore/add/remove/force
 
 # Add or remove space before ':' in a Java/C++11 range-based 'for',
 # as in 'for (Type var <here> : expr)'.
-sp_before_for_colon             = ignore   # ignore/add/remove/force
+sp_before_for_colon             = add   # ignore/add/remove/force
 
 # (D) Add or remove space between 'extern' and '(' as in 'extern <here> (C)'.
 sp_extern_paren                 = ignore   # ignore/add/remove/force
@@ -1124,10 +1124,10 @@ sp_after_noexcept               = ignore   # ignore/add/remove/force
 sp_vala_after_translation       = ignore   # ignore/add/remove/force
 
 # Add or remove space before a bit colon ':'.
-sp_before_bit_colon             = ignore   # ignore/add/remove/force
+sp_before_bit_colon             = remove   # ignore/add/remove/force
 
 # Add or remove space after a bit colon ':'.
-sp_after_bit_colon              = ignore   # ignore/add/remove/force
+sp_after_bit_colon              = remove   # ignore/add/remove/force
 
 # If true, a <TAB> is inserted after #define.
 force_tab_after_define          = false    # true/false
@@ -1733,7 +1733,7 @@ nl_end_of_file                  = ignore   # ignore/add/remove/force
 nl_end_of_file_min              = 0        # unsigned number
 
 # Add or remove newline between '=' and '{'.
-nl_assign_brace                 = ignore   # ignore/add/remove/force
+nl_assign_brace                 = remove   # ignore/add/remove/force
 
 # (D) Add or remove newline between '=' and '['.
 nl_assign_square                = remove   # ignore/add/remove/force
@@ -1759,7 +1759,7 @@ nl_enum_class                   = ignore   # ignore/add/remove/force
 nl_enum_class_identifier        = ignore   # ignore/add/remove/force
 
 # Add or remove newline between 'enum class' type and ':'.
-nl_enum_identifier_colon        = ignore   # ignore/add/remove/force
+nl_enum_identifier_colon        = remove   # ignore/add/remove/force
 
 # Add or remove newline between 'enum class identifier :' and type.
 nl_enum_colon_type              = ignore   # ignore/add/remove/force
@@ -1887,7 +1887,7 @@ nl_after_case                   = false    # true/false
 # Add or remove newline between a case ':' and '{'.
 #
 # Overrides nl_after_case.
-nl_case_colon_brace             = ignore   # ignore/add/remove/force
+nl_case_colon_brace             = remove   # ignore/add/remove/force
 
 # Add or remove newline between ')' and 'throw'.
 nl_before_throw                 = ignore   # ignore/add/remove/force
@@ -2579,7 +2579,7 @@ pos_arith                       = ignore   # ignore/break/force/lead/trail/join/
 
 # The position of assignment in wrapped expressions. Do not affect '='
 # followed by '{'.
-pos_assign                      = ignore   # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
+pos_assign                      = break   # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
 
 # The position of Boolean operators in wrapped expressions.
 pos_bool                        = ignore   # ignore/break/force/lead/trail/join/lead_break/lead_force/trail_break/trail_force
